tests/invalid/If_Invalid_4.whiley
function f(int x) -> int:
    if x < 10:
        return 1
    else:
        if x > 10:
            return 2
